<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TempConverter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/get_input"
        android:layout_width="221dp"
        android:layout_height="62dp"
        android:layout_margin="20dp"
        android:layout_marginTop="110sp"
        android:hint="@string/enter_temperature"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/show_output"
        android:layout_width="221dp"
        android:layout_height="62dp"
        android:layout_marginTop="30sp"
        android:text="@string/_0_0"
        android:textAlignment="textEnd"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_input" />

    <RadioGroup
        android:id="@+id/select_input"
        android:layout_width="305dp"
        android:layout_height="177dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="200dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="50dp">


        <RadioButton
            android:id="@+id/c2f"
            android:layout_width="wrap_content"
            android:layout_height="79dp"
            android:text="@string/centigradetoferenite"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/f2c"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:text="@string/ferenitetocentigrade"
            android:textAlignment="textStart"
            android:textSize="18sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/SubmitorReset"
        android:layout_width="225dp"
        android:layout_height="157dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_input">

        <Button
            android:id="@+id/submitbtn"
            android:layout_width="147dp"
            android:layout_height="57dp"
            android:text="@string/submitbtn"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/SubmitorReset" />

        <Button
            android:id="@+id/resetbtn"
            android:layout_width="146dp"
            android:layout_height="52dp"
            android:text="@string/Resetbtn"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/SubmitorReset" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>